--- a/predicting_default_risk.ipynb
+++ b/predicting_default_risk.ipynb
@@ -89,8 +89,8 @@
    "source": [
     "# #import data set\n",
     "# import os\n",
-    "# os.environ['KAGGLE_USERNAME'] = \"carlodavid012\" # username from the json file \n",
-    "# os.environ['KAGGLE_KEY'] = \"31cd4aee6befc6805c0f057d09ef2530\" # key from the json file\n",
+    "# os.environ['KAGGLE_USERNAME'] = \"\" # username from the json file \n",
+    "# os.environ['KAGGLE_KEY'] = \"\" # key from the json file\n",
     "# !kaggle competitions download -c home-credit-default-risk"
    ]
   },
